Fix icon bad alignment on card

--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -55,6 +55,8 @@
             left: 0;
 
             img {
+                display: block;
+                margin: 0 auto;
                 width: 45px;
                 margin-top: 50%;
                 transform: translateY(-50%);
